--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajax-client": "^3.0.3",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
